# dgcnn

./: 3d_seg_guide.md  CMakeLists.txt  README.md  info.txt  online_execution.py  online_execution_ros.py  online_execution_ros_tf.py  package.xml
info_algorithms/: conversion_utils.py  evaluate_info.py  iea.py  iua.py
msg/: info_bb.msg  info_bbs.msg
results/: results_cross_instances_ref.xlsx  results_cross_pixels.xlsx  results_rep_instances_ref.xlsx  results_rep_pixels.xlsx  results_sparus_xiroi.xlsx  results_sparus_xiroi_cross.xlsx  results_tests1.xlsx  results_tests2.xlsx  times_test 2.xlsx
sem_seg/: ScreenCamera_2021-08-13-12-49-13.json  conversion_utils.py  evaluate_info.py  evaluate_instances.py  evaluate_pixel.py  expand_polygon.py  get_info.py  get_instances.py  indoor3d_util.py  inference.py  inference_online.py  inference_online_from_pred.py  inference_ros.py  inference_ros_tf.py  inference_ros_tf_odom.py  inference_ros_tf_slam.py  inference_ros_tf_slam_nobb.py  inference_ros_tf_slam_nobb_unify.py  inference_ros_tf_unify.py  info_proc.py  info_to_world.py  map_utils.py  map_utils2.py  map_utils3.py  map_utils4.py  map_utils5.py  model.py  plt_to_txt.py  ros_sub_info.py  test.py  txt_to_npy.py  update_poses.py
trained_model/: model.ckpt.index
trained_models/12/: checkpoint  log_train.txt  model.ckpt.data-00001-of-00002
trained_models/12/val/: events.out.tfevents.1619128208.miguel-desktop
trained_models/12pool/: checkpoint  cls.txt  log_train.txt  model.ckpt.data-00001-of-00002  model.ckpt.index  model.py  train.py
utils/: npy_to_h5.py  tf_util.py
(+1 files in other folders)
